# ncnn_test_inference

./: .gitignore  CMakeLists.txt  README.md  build_ncnn.sh  build_ncnn_with_embarcadero.sh  build_ncnn_with_mingw.sh  build_test.sh  build_test_with_embarcadero.sh  cpuid.h  main.cpp
assets/: yolo-fastest-opt.param
